--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ AI_PERSONALITY=apollo
 OPENAI_API_KEY=sk-your-openai-key-here
 # ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
 # GOOGLE_API_KEY=your-google-palm-key-here
+# DEEPSEEK_API_KEY=your-deepseek-key-here
 
 # Optional Database Configuration
 DB_PATH=./apollo_memory.db
