--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@anthropic-ai/sdk": "^0.33.1",
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "https": "^1.0.0",
     "openai": "^4.79.0",
+    "puppeteer": "^24.1.1",
+    "puppeteer-core": "^24.1.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "readline": "^1.3.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
