Update .env.example Grok

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ OPENAI_API_KEY=sk-your-openai-key-here
 # ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
 # GOOGLE_API_KEY=your-google-palm-key-here
 # DEEPSEEK_API_KEY=your-deepseek-key-here
+# GROK_API_KEY=your-grok-api-key-here
 
 # Optional Database Configuration
 DB_PATH=./apollo_memory.db
