--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "readline": "^1.3.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ws": "^8.14.2"
   }
 }
